--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:           pretty
 # Setup
 title:               周宇盛的博客
 tagline:             "网页制作 学习笔记 读书笔记"
-description:         'A blog made from an IT lover about IT and other stuff (insert madness here). Based on the awesome <a href="https://github.com/poole/lanyon" target="_blank">Lanyon</a> theme, made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:         '知止而后有定 定而后能静 静而后能安 安而后能虑 虑而后能得。博客基于由 <a href="https://twitter.com/mdo" target="_blank">@mdo</a> 制作的 <a href="https://github.com/poole/lanyon" target="_blank">Lanyon</a> 主题'
 url:                 http://www.zhouyusheng.com
 baseurl:             /
 paginate:            5
