--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink:           pretty
 
 # Setup
 title:               周宇盛的博客
-tagline:             "网页制作 学习笔记 读书笔记"
+tagline:             "学习笔记 读书笔记"
 description:         '知止而后有定 定而后能静 静而后能安 安而后能虑 虑而后能得——《大学》。博客基于由 <a href="https://twitter.com/mdo" target="_blank">@mdo</a> 制作的 <a href="https://github.com/poole/lanyon" target="_blank">Lanyon</a> 主题'
 url:                 http://www.zhouyusheng.com
 baseurl:             /
